--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "dev:full": "concurrently --kill-others-on-fail \"npm run dev\" \"npm run server\"",
     "server": "node server/index.js",
+    "start": "node server/index.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
